--- a/Data Driven Web Project 2/index.html
+++ b/Data Driven Web Project 2/index.html
@@ -2,6 +2,7 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- Load the d3 library. -->
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
@@ -14,8 +15,38 @@
 <div id="map_container">
   <div id="map1"></div>
 </div>
+<div class = "slider_container">
+  <div class="range-slider">
+      <input class="input-range" type="range" min ="0" max="6" step ="1" value ="0" oninput = "DrawGraph(this.value)" onchange="DrawGraph(this.value)">
+  </div> 
+  <div class="button_container">
+    <div id="drug_button" onclick="DrawGraph(illicit_drugs_percent);">
+      Drug Usage in the Past Month
+    </div>
+    <div id="income_button">
+      Median Income
+    </div>
+    <div id="obesity_button">
+      Obesity
+    </div>
+    <div id="hard_drugs_button">
+      Hard Drugs
+    </div>
+    <div id="marijuana_button">
+      Marijuana
+    </div>
+    <div id="tobacco_button">
+      Tobacco
+    </div>
+    <div id="alcohol_button">
+      Alcohol
+    </div>
+  </div>
+</div>
+
 <script>
 
+var map;
 
 var stateNameToAbbreviation = [];
 var stateTotalPop = [];
@@ -27,6 +58,8 @@ var marijuana_percent = [];
 var alcohol_percent = [];
 var non_marijuana_percent = [];
 var tobacco_percent = [];
+var income = [];
+preProcessDoneIncome = false;
 preProcessDoneAlcohol = false;
 preProcessDoneDrugs=false;
 preProcessDoneObesity=false;
@@ -47,11 +80,11 @@ function preProcessData(){
   d3.csv("illicit_drugs_past_month.csv", function(error,data) {
     data.forEach(function(d,i){
       //note does not include Total U.S.,Northeast, Midwest, South, West
-      if(d['State']!="Total U.S." && d['State']!= "Northeast" && d['State']!="Midwest" && d['State']!="South"  && d['State']!="West" && d['State']!=""){
+      //if(d['State']!="Total U.S." && d['State']!= "Northeast" && d['State']!="Midwest" && d['State']!="South"  && d['State']!="West" && d['State']!=""){
         illicit_drugs_percent.push({"State" : d['State'],
                              "Percent" : Number(d['12+'])
          });
-      }
+      //}
       if(i==data.length-1){
         preProcessDoneDrugs=true;
       }
@@ -117,34 +150,36 @@ function preProcessData(){
       }
     });
   });
+
+  d3.csv("income_2013.csv", function(error,data) {
+    data.forEach(function(d,i){
+        income.push({"State" : d['State'],
+                      "Percent" : d['Median income']
+         });
+      
+      if(i==data.length-1){
+        preProcessDoneIncome=true;
+      }
+    });
+  });
 }
 
 
-function makeDrugGraph(){
+function makeChloroplethMap(){
   //if data has been parsed then go, else wait
-  if (preProcessDoneDrugs && preProcessDoneObesity && preProcessDoneMarijuana && preProcessDoneAlcohol && preProcessDoneNonMarijuana && preProcessDoneTobacco) {
+  if (preProcessDoneDrugs && preProcessDoneObesity && preProcessDoneMarijuana && preProcessDoneAlcohol && preProcessDoneNonMarijuana && preProcessDoneTobacco && preProcessDoneIncome) {
     colorRed=d3.scale.linear()
       .domain([d3.min(illicit_drugs_percent,function(d){
         //minus two so that all states have color
-        return d["Percent"]-2;
+        return d["Percent"];
       }), d3.max(illicit_drugs_percent,function(d){
         return d["Percent"];
       })])
       .range(["#FCFBFB", "#FC0000"]);
 
-  d3.csv("illicit_drugs_past_month.csv", function(error,data) {
-    data.forEach(function(d){
-     //console.log(d);
-      var stateName = d['State']
-      var StateAbbreviation = stateNameToAbbreviation[stateName];
-      //replace commas
-      var drugPercent =(d['12+']);
-      //console.log(StateAbbreviation+" : "+drugPercent);
-      drugs.updateChoropleth(help_choloropleth(StateAbbreviation,drugPercent));
-      });
-  });
 
-  var drugs = new Datamap({
+
+  map = new Datamap({
     scope: 'usa',
     width: 900,
     height: 500,
@@ -154,21 +189,23 @@ function makeDrugGraph(){
                  popupTemplate: function(geography, data) {
                         return "<div class='hoverinfo'><div class='hover_state'>" + geography.properties.name + "</div>" +
                         "<div class='hover_illicit_drugs'>Illicit Drugs <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,illicit_drugs_percent)+"%</span></div>"+
+                        "<div class='hover_illicit_drugs'>Median Income <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,income)+"</span></div>"+
+                        "<div class='hover_illicit_drugs'>Obesity <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,obesity_percent)+"%</span></div>"+
                         "<div class='hover_illicit_drugs'>Hard Drugs <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,non_marijuana_percent)+"%</span></div>"+
                         "<div class='hover_illicit_drugs'>Marijuana <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,marijuana_percent)+"%</span></div>"+
                         "<div class='hover_illicit_drugs'>Tobacco <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,tobacco_percent)+"%</span></div>"+
-                        "<div class='hover_illicit_drugs'>Alcohol <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,alcohol_percent)+"%</span></div>"+
-                        "<div class='hover_illicit_drugs'>Obesity <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,obesity_percent)+"%</span></div>";
+                        "<div class='hover_illicit_drugs'>Alcohol <span class='hover_illicit_percent'>" +  getPercentByState(geography.properties.name,alcohol_percent)+"%</span></div>";
                         },
               borderColor: "black",
           },
     fills: {
-    defaultFill: colorRed(0)
+    defaultFill: "white"
     }
   });
+  DrawGraph(0);
   }
   else {
-      setTimeout(makeDrugGraph,100);
+      setTimeout(makeChloroplethMap,100);
   }
   
 }
@@ -187,8 +224,71 @@ var help_choloropleth = function(state, percentage){
   return dictionary;
 }
 
+var DrawGraph = function(value){
+  console.log(value);
+  var data = illicit_drugs_percent;
+    if(value == 1){
+      data = income;
+    }
+    else if(value ==2){
+      data = obesity_percent;
+    }
+    else if(value ==3){
+      data = non_marijuana_percent;
+    }
+    else if(value ==4){
+      data = marijuana_percent;
+    }
+    else if(value ==5){
+      data = tobacco_percent;
+    }
+    else if(value ==6){
+      data = alcohol_percent;
+    }
+    //have to recalculate color scale
+    var max = d3.max(data,function(d){
+        //if string, need to parse
+        if(typeof d["Percent"] =="string"){
+          return parseFloat(d["Percent"].replace(',',''));
+        }
+        else{
+          return Number((d["Percent"]))
+        }
+      });
+
+    var min = d3.min(data,function(d){
+        //if string, need to parse
+        if(typeof d["Percent"] =="string"){
+          return parseFloat(d["Percent"].replace(',',''));
+        }
+        else{
+          return Number((d["Percent"]))
+        }
+      });
+
+    colorRed=d3.scale.linear()
+      .domain([min-min*.5,max])
+      .range(["#FCFBFB", "#FC0000"]);
+
+    data.forEach(function(d){
+     //console.log(d);
+      var stateName = d['State']
+      var StateAbbreviation = stateNameToAbbreviation[stateName];
+      //replace commas
+      if(typeof d["Percent"] =="string"){
+        var drugPercent = parseFloat(d["Percent"].replace(',',''));
+      }
+      else{
+        var drugPercent =(d['Percent']);
+      }
+
+      //console.log(StateAbbreviation+" : "+drugPercent);
+      map.updateChoropleth(help_choloropleth(StateAbbreviation,drugPercent));
+    });
+}
+
 preProcessData();
-makeDrugGraph();
+makeChloroplethMap();
 </script>
 
 </body>
