--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-12 text-center ">
                 <h1 class="page-header text-uppercase">Ashton Hsu: Developer
                 </h1>
-                <p class='header'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet un</p>
+                <p class='header'>I am a Web Developer passionate about </p>
             </div>
         </div>
         <!-- /.row -->
@@ -36,7 +36,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                <a href="/drug map/index.html">
+                <a href="/Drug Map/index.html">
 
                 <video autoplay id="myVideo" loop>
                     <source src="images/video1.mp4" type="video/mp4" id="ss">
@@ -48,7 +48,7 @@
                 <h3>Interactive Visualization of US Drug Usage (D3)</h3>
                 <h4>2015</h4>
                 <p>This project used D3 interactive maps to explore and find correlations between drug usage throughout the U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and attempted to find any relationship between them.</p>
-                <a class="btn btn-primary" href="/drug map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="/Drug Map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
