--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-12 text-center ">
                 <h1 class="page-header text-uppercase">Ashton Hsu: Developer
                 </h1>
-                <p class='header'>I am a Web Developer passionate about </p>
+                <p class='header'>I am a web developer passionate about combining sleek visual design with awesome tech. I am fluent in : PHP, JavaScript, CSS(LESS/SASS), and HTML </p>
             </div>
         </div>
         <!-- /.row -->
@@ -47,8 +47,9 @@
             <div class="col-md-5">
                 <h3>Interactive Visualization of US Drug Usage (D3)</h3>
                 <h4>2015</h4>
-                <p>This project used D3 interactive maps to explore and find correlations between drug usage throughout the U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and attempted to find any relationship between them.</p>
+                <p>This project uses D3 interactive maps to explore and find correlations between drug usage throughout the U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and attempted to find any relationship between them.</p>
                 <a class="btn btn-primary" href="/Drug Map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Drug%20Map">View Code </a>
             </div>
         </div>
         <!-- /.row -->
@@ -65,11 +66,28 @@
             <div class="col-md-5">
                 <h3>Static Visualization of US Sport Championships(D3)</h3>
                 <h4>2015</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+                <p>This project also uses D3 to create a static visualization. It's goal was to visualize a general overview of which US cities had successful sport franchises.</p>
                 <a class="btn btn-primary" href="/Sports Map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Sports%20Map">View Code </a>
             </div>
         </div>
         <!-- /.row -->
+
+
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="invis.io/R81N41PFV">
+                    <img class="img-responsive" src="/images/sports.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Kulture - UX Study</h3>
+                <h4>2014</h4>
+                <p>Kulture is an application designed for a human computer interaction course. Traveling to a new environment that has a different language and cultural norms takes time to adjust to. Kulture's primary goal was to help immigrants adapt quicker into a foreign environment by connecting them to organizations and events based on the user's their interests. This above link is designed to demonstrate well thought out user experience as well as a solution to helping immigrants adapt quicker into their environment. We had several iterations and took into consideration user feedback and issues. Note the link is only a mockup and does not have a functioning backend</p>
+                <a class="btn btn-primary" href="invis.io/R81N41PFV">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
 
         <hr>
 
