--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
             <div class="col-lg-12 text-center ">
                 <h1 class="page-header text-uppercase">Ashton Hsu: Developer
                 </h1>
-                <p class='header'>I am a web developer passionate about combining sleek visual design with awesome tech. I am fluent in : PHP, JavaScript, CSS(LESS/SASS), and HTML </p>
+                <p class='header'>I am a web developer passionate about combining sleek visual design with awesome tech. I am fluent in : JavaScript, CSS(LESS/SASS), PHP, Mongo, MYSQL. I also know Java and Python  </p>
             </div>
         </div>
         <!-- /.row -->
 
-        <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
                 <a href="/Drug Map/index.html">
@@ -56,7 +55,6 @@
 
         <hr>
 
-        <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
                 <a href="/Sports Map/index.html">
@@ -73,18 +71,35 @@
         </div>
         <!-- /.row -->
 
+        <hr>
+        
+        <div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="/images/sports.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Food Chain - Game Created in Java</h3>
+                <h4>2015</h4>
+                <p>I worked with a team of 5 to create a small game in Java over 4 months. Food Chain is about hunter who has to strategically capture pigs while avoiding wolves who want to eat him. We followed a process similar to agile development: we released and implemented user feedback in 2 week sprints. This was a fun project working with Java and an MVC</p>
+                <a class="code-link" href="https://github.com/kmh287/FoodChain">View Code </a>
+            </div>
+        </div>
 
-        <!-- Project Two -->
+        <hr>
+
+
         <div class="row">
             <div class="col-md-7">
                 <a href="invis.io/R81N41PFV">
-                    <img class="img-responsive" src="/images/sports.png" alt="">
+                    <img class="img-responsive" src="/images/kulture.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
                 <h3>Kulture - UX Study</h3>
                 <h4>2014</h4>
-                <p>Kulture is an application designed for a human computer interaction course. Traveling to a new environment that has a different language and cultural norms takes time to adjust to. Kulture's primary goal was to help immigrants adapt quicker into a foreign environment by connecting them to organizations and events based on the user's their interests. This above link is designed to demonstrate well thought out user experience as well as a solution to helping immigrants adapt quicker into their environment. We had several iterations and took into consideration user feedback and issues. Note the link is only a mockup and does not have a functioning backend</p>
+                <p>We designed and created a user experience around a specific user group through user research and feedback. Kulture is an application that provides a solution for helping immigrants to adapt quicker into a foreign environment by connecting them to organizations and events based on common interests. Note the link is only a mockup and does not have a functioning backend</p>
                 <a class="btn btn-primary" href="invis.io/R81N41PFV">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
