adding gameplay footage

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="/images/sports.png" alt="">
+                    <video controls loop autoplay="true">
+                      <source src="Gameplay/foodchain.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
                 </a>
             </div>
             <div class="col-md-5">
@@ -100,7 +103,7 @@
                 <h3>Kulture - UX Study</h3>
                 <h4>2014</h4>
                 <p>We designed and created a user experience around a specific user group through user research and feedback. Kulture is an application that provides a solution for helping immigrants to adapt quicker into a foreign environment by connecting them to organizations and events based on common interests. Note the link is only a mockup and does not have a functioning backend</p>
-                <a class="btn btn-primary" href="invis.io/R81N41PFV">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://projects.invisionapp.com/share/R81N41PFV#/screens/46913487">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
 
