--- a/index.html
+++ b/index.html
@@ -28,10 +28,46 @@
             <div class="col-lg-12 text-center ">
                 <h1 class="page-header text-uppercase">Ashton Hsu: Developer
                 </h1>
-                <p class='header'>I am a web developer passionate about combining sleek visual design with awesome tech. I am fluent in : JavaScript, CSS(LESS/SASS), PHP, Mongo, MYSQL. I also know Java and Python  </p>
+                <p class='header'>I am a backend developer with experience building out full stack web applications. I thrive in a collaborative work environment that encourages learning new technology and has a high standard for clean code. In my free time you can find me climbing rocks or soldering electronics.</p>
             </div>
         </div>
-        <!-- /.row -->
+
+        <div class="row">
+            <div class="col-md-7">
+                <a href="https://swensonhe.com">
+
+                    <video autoplay muted id="swensonhe" loop>
+                        <source src="images/swensonhe.mp4" type="video/mp4" id="ss">
+                        Your browser does not support the video tag.
+                    </video>
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>SwensonHe Website</h3>
+                <h4>2018</h4>
+                <p>This website was created with wordpress showcasing SwensonHe's past work. Site is responsive and was created with a wordpress theme from scratch</p>
+                <a class="btn btn-primary" href="https://swensonhe.com">View Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-7">
+                <a href="/Drug Map/index.html">
+                    <img class="img-responsive" src="images/powermusic.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Power Music</h3>
+                <h4>2018</h4>
+                <p>Power Music involved migrating an existing Magento 1 e-commerce website to a new Magento 2 website. I was involved in writing a large portion of the new code base including back end logic for music mixing and subscription management</p>
+                <a class="btn btn-primary" href="https://powermusic.com">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+
+        <hr>
+
 
         <div class="row">
             <div class="col-md-7">
@@ -58,7 +94,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="/Sports Map/index.html">
-                    <img class="img-responsive" src="/images/sports.png" alt="">
+                    <img class="img-responsive" src="images/sports.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -96,7 +132,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="invis.io/R81N41PFV">
-                    <img class="img-responsive" src="/images/kulture.png" alt="">
+                    <img class="img-responsive" src="images/kulture.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
