fixing broken js

--- a/index.html
+++ b/index.html
@@ -20,130 +20,151 @@
 </head>
 
 <body>
-    <!-- Page Content -->
-    <div class="container">
+<!-- Page Content -->
+<div class="container">
 
-        <!-- Page Heading -->
-        <div class="row">
-            <div class="col-lg-12 text-center ">
-                <h1 class="page-header text-uppercase">Ashton Hsu: Developer
-                </h1>
-                <p class='header'>I am a backend developer with experience building out full stack web applications. I thrive in a collaborative work environment that encourages learning new technology and has a high standard for clean code. In my free time you can find me climbing rocks or soldering electronics.</p>
-            </div>
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12 text-center ">
+            <h1 class="page-header text-uppercase">Ashton Hsu: Developer
+            </h1>
+            <p class='header'>I am a backend developer with experience building out full stack web applications. I
+                thrive in a collaborative work environment that encourages learning new technology and has a high
+                standard for clean code. In my free time you can find me climbing rocks or soldering electronics.</p>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-md-7">
-                <a href="https://swensonhe.com">
+    <div class="row">
+        <div class="col-md-7">
+            <a href="https://swensonhe.com">
 
-                    <video autoplay muted id="swensonhe" loop>
-                        <source src="images/swensonhe.mp4" type="video/mp4" id="ss">
-                        Your browser does not support the video tag.
-                    </video>
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>SwensonHe Website</h3>
-                <h4>2018</h4>
-                <p>This website was created with wordpress showcasing SwensonHe's past work. Site is responsive and was created with a wordpress theme from scratch</p>
-                <a class="btn btn-primary" href="https://swensonhe.com">View Website <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
+                <video autoplay muted id="swensonhe" loop>
+                    <source src="images/swensonhe.mp4" type="video/mp4" id="ss">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
         </div>
-
-        <hr>
-
-        <div class="row">
-            <div class="col-md-7">
-                <a href="/Drug Map/index.html">
-                    <img class="img-responsive" src="images/powermusic.png" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Power Music</h3>
-                <h4>2018</h4>
-                <p>Power Music involved migrating an existing Magento 1 e-commerce website to a new Magento 2 website. I was involved in writing a large portion of the new code base including back end logic for music mixing and subscription management</p>
-                <a class="btn btn-primary" href="https://powermusic.com">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
+        <div class="col-md-5">
+            <h3>SwensonHe Website</h3>
+            <h4>2018</h4>
+            <p>This website was created with wordpress showcasing SwensonHe's past work. Site is responsive and was
+                created with a wordpress theme from scratch</p>
+            <a class="btn btn-primary" href="https://swensonhe.com">View Website <span
+                    class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
+    </div>
 
-        <hr>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-7">
+            <a href="https://www.powermusic.com">
+                <img class="img-responsive" src="images/powermusic.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-5">
+            <h3>Power Music</h3>
+            <h4>2018</h4>
+            <p>Power Music involved migrating an existing Magento 1 e-commerce website to a new Magento 2 website. I was
+                involved in writing a large portion of the new code base including back end logic for music mixing and
+                subscription management</p>
+            <a class="btn btn-primary" href="https://powermusic.com">View Project <span
+                    class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+    </div>
+
+    <hr>
 
 
-        <div class="row">
-            <div class="col-md-7">
-                <a href="/Drug Map/index.html">
+    <div class="row">
+        <div class="col-md-7">
+            <a href="/drug_map/index.html">
 
                 <video autoplay id="myVideo" loop>
                     <source src="images/video1.mp4" type="video/mp4" id="ss">
                     Your browser does not support the video tag.
                 </video>
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Interactive Visualization of US Drug Usage (D3)</h3>
-                <h4>2015</h4>
-                <p>This project uses D3 interactive maps to explore and find correlations between drug usage throughout the U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and attempted to find any relationship between them.</p>
-                <a class="btn btn-primary" href="/Drug Map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Drug%20Map">View Code </a>
-            </div>
+            </a>
         </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <div class="row">
-            <div class="col-md-7">
-                <a href="/Sports Map/index.html">
-                    <img class="img-responsive" src="images/sports.png" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Static Visualization of US Sport Championships(D3)</h3>
-                <h4>2015</h4>
-                <p>This project also uses D3 to create a static visualization. It's goal was to visualize a general overview of which US cities had successful sport franchises.</p>
-                <a class="btn btn-primary" href="/Sports Map/index.html">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Sports%20Map">View Code </a>
-            </div>
+        <div class="col-md-5">
+            <h3>Interactive Visualization of US Drug Usage (D3)</h3>
+            <h4>2015</h4>
+            <p>This project uses D3 interactive maps to explore and find correlations between drug usage throughout the
+                U.S. and other factors. We analyzed factors such as region, obesity, crime rate, and median income and
+                attempted to find any relationship between them.</p>
+            <a class="btn btn-primary" href="/drug_map/index.html">View Project <span
+                    class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Drug%20Map">View
+                Code </a>
         </div>
-        <!-- /.row -->
+    </div>
+    <!-- /.row -->
 
-        <hr>
-        
-        <div class="row">
-            <div class="col-md-7">
-                <a href="#">
-                    <video controls loop autoplay="true">
-                      <source src="Gameplay/foodchain.mp4" type="video/mp4">
-                      Your browser does not support the video tag.
-                    </video>
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Food Chain - Game Created in Java</h3>
-                <h4>2015</h4>
-                <p>I worked with a team of 5 to create a small game in Java over 4 months. Food Chain is about hunter who has to strategically capture pigs while avoiding wolves who want to eat him. We followed a process similar to agile development: we released and implemented user feedback in 2 week sprints. This was a fun project working with Java and an MVC</p>
-                <a class="code-link" href="https://github.com/kmh287/FoodChain">View Code </a>
-            </div>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-7">
+            <a href="/sports_map/index.html">
+                <img class="img-responsive" src="images/sports.png" alt="">
+            </a>
         </div>
-
-        <hr>
-
-
-        <div class="row">
-            <div class="col-md-7">
-                <a href="invis.io/R81N41PFV">
-                    <img class="img-responsive" src="images/kulture.png" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Kulture - UX Study</h3>
-                <h4>2014</h4>
-                <p>We designed and created a user experience around a specific user group through user research and feedback. Kulture is an application that provides a solution for helping immigrants to adapt quicker into a foreign environment by connecting them to organizations and events based on common interests. Note the link is only a mockup and does not have a functioning backend</p>
-                <a class="btn btn-primary" href="https://projects.invisionapp.com/share/R81N41PFV#/screens/46913487">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
+        <div class="col-md-5">
+            <h3>Static Visualization of US Sport Championships(D3)</h3>
+            <h4>2015</h4>
+            <p>This project also uses D3 to create a static visualization. It's goal was to visualize a general overview
+                of which US cities had successful sport franchises.</p>
+            <a class="btn btn-primary" href="/sports_map/index.html">View Project <span
+                    class="glyphicon glyphicon-chevron-right"></span></a>
+            <a class="code-link" href="https://github.com/ashtonhsu20/ashtonhsu20.github.io/tree/master/Sports%20Map">View
+                Code </a>
         </div>
+    </div>
+    <!-- /.row -->
 
-        <hr>
+    <hr>
+
+    <div class="row">
+        <div class="col-md-7">
+            <a href="#">
+                <video controls loop autoplay="true">
+                    <source src="Gameplay/foodchain.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+        </div>
+        <div class="col-md-5">
+            <h3>Food Chain - Game Created in Java</h3>
+            <h4>2015</h4>
+            <p>I worked with a team of 5 to create a small game in Java over 4 months. Food Chain is about hunter who
+                has to strategically capture pigs while avoiding wolves who want to eat him. We followed a process
+                similar to agile development: we released and implemented user feedback in 2 week sprints. This was a
+                fun project working with Java and an MVC</p>
+            <a class="code-link" href="https://github.com/kmh287/FoodChain">View Code </a>
+        </div>
+    </div>
+
+    <hr>
+
+
+    <div class="row">
+        <div class="col-md-7">
+            <a href="invis.io/R81N41PFV">
+                <img class="img-responsive" src="images/kulture.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-5">
+            <h3>Kulture - UX Study</h3>
+            <h4>2014</h4>
+            <p>We designed and created a user experience around a specific user group through user research and
+                feedback. Kulture is an application that provides a solution for helping immigrants to adapt quicker
+                into a foreign environment by connecting them to organizations and events based on common interests.
+                Note the link is only a mockup and does not have a functioning backend</p>
+            <a class="btn btn-primary" href="https://projects.invisionapp.com/share/R81N41PFV#/screens/46913487">View
+                Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
+    </div>
+
+    <hr>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
