--- a/sports_map/index.html
+++ b/sports_map/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
 <div id="map5"></div>
 
 <!-- include JS libraries -->
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="js/datamaps.usa.min.js"></script>
 <!-- Draw code -->
 <script src="js/draw.js"> </script>
